products/static/products/css/products.css
.card-img-top{
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}
.fa-star, .fa-tag{
    color: orange;
}
.product_title{
    min-height: 75px;
}
.description_detailed_view{
    max-height: 200px;
    overflow-y: scroll;
    margin-bottom: 5px;
}

.fa-check{
    color: green;
    font-weight: bolder;
}
.fa-times{
    color: red;
    font-weight: bolder;
    
}

.recommended_drop_down{
    font-size: 12px;
}

.edit_review_form{
    border: 1px solid lightgray;
}

